02-01-18 : The mysteries of finance in The World do not include negative
           amounts of money.

01-29-18 : You must be dextrous and not agile to avoid jamming locks while
           picking them.

01-22-18 : Bandaging of head and arms now uses a more appropriate number of
           bandages.

01-21-18 : Donate command now junks newbie items instead of donating them.

07-04-17 : Weapons' magical status is no longer ignored in damage immunity
           calculations.

07-04-17 : The world command now reports the correct number of distinct
           mobiles never killed.

07-04-17 : Handgonnes, if they exist anywhere in the World, are now
           properly single-shot weapons.

07-03-17 : Blindness duration is now affected by saves.

07-03-17 : Crits and saves now affect life gain from lich touch.

07-03-17 : Crit success now extends shapeshift and polymorph duration.

07-03-17 : Bandaging legs uses up the correct number of bandages.

07-03-17 : Counterattack on deathstroke failure is now affected by armor
           and stats.

06-13-17 : Djalla's protection and Legba's guidance are now more powerful
           when cast on self.

03-27-16 : Shaman chrism items now working without crashing the mud. Kudos
           to Jeren for helping identify the problem and providng a solution.

	   - Changes to Load Rate. Fixed Rate was increased and SuitSet also
	     saw a rise in their load rates. Please report any excessive
	     load rates.
	   - PoC have been reduced in frequency.
	   - As we now have the Sneezymud domain, the MUD is no longer
             identified as Grimhavenmud.

07-23-15 : Ratmen as a race are now properly ratman-sized instead of
           accidentally defaulting to the human racial template.

07-22-15 : The ping toggle is gone, since the system no longer pings anyone.

07-20-15 : The mayor of Grimhaven has adjusted the rent tax schedule to be
           more progressive. Also, the 'offer' and 'rent credit' commands
           are gone.
