@@ -1,6 +1,8 @@
 02-01-18 : The mysteries of finance in The World do not include negative
            amounts of money.
 
+01-29-18 : Jammed locks don't affect doorbash.
+
 01-29-18 : You must be dextrous and not agile to avoid jamming locks while
            picking them.
 
